--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
-<html>
-	<head>
-		<title>TestAngularJano</title>
-		<script type="text/javascript" src="angular.min.js"></script>
-	</head>
-	<body>
-
-	</body>
+<html ng-app="app">
+    <head>
+        <title>TestAngularJano</title>
+        <script type="text/javascript" src="angular.min.js"></script>
+        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="controller.js"></script>
+        <script type="text/javascript" src="distribuidorFactory.js"></script>
+    </head>
+    <body ng-controller="controlador1">
+        <form ng-submit="submit()">
+            Distribuidor:
+            <select ng-model="distribuidor" ng-options="option.idDistribuidor as option.Distribuidor for option in distribuidores" required>
+                <option></option>
+            </select><br><br>
+            Descripcion: <input type="text" ng-model="descripcion" required/>
+            <button type="reset">Limpiar</button>
+            <button type="submit">Enviar</button>
+        </form>
+        <div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Descripcion</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="lista in listado">
+                        <td>{{lista.id}}</td>
+                        <td>{{lista.descripcion}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </body>
 </html>
